# specflow

./: .env.example  .gitignore  CLI_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  FINAL_MVP_STATUS.md  MVP_COMPLETE.md  Makefile  PROGRESS.md  README.md  SESSION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  projectplan.md  pyproject.toml
examples/: intelligence_demo.py  sample_prd.md
src/specflow/: __init__.py
src/specflow/api/: README.md  main.py  schemas.py
src/specflow/api/routes/: __init__.py  oauth.py  prd.py  tickets.py
src/specflow/cli/: __init__.py  main.py  output.py
src/specflow/cli/commands/: __init__.py  analyze.py  auth.py  generate.py  parse.py
src/specflow/integrations/: __init__.py  exceptions.py  jira_client.py  oauth_handler.py  oauth_models.py  ticket_converter.py
src/specflow/intelligence/: __init__.py  analyzer.py  extractor.py  generator.py  scorer.py
src/specflow/models/: __init__.py  analysis.py  prd.py  ticket.py
src/specflow/parsers/: __init__.py  base.py  markdown.py
src/specflow/utils/: config.py  logger.py
tests/: conftest.py  test_models.py
tests/test_api/: test_main.py  test_prd_routes.py  test_ticket_routes.py
tests/test_cli/: __init__.py  test_analyze.py  test_auth.py  test_generate.py  test_parse.py
tests/test_e2e/: __init__.py  conftest.py  test_api_workflows.py  test_cli_workflows.py  test_error_recovery.py  test_full_pipeline.py  test_performance.py
tests/test_integrations/: test_integration.py  test_jira_client.py  test_oauth_handler.py  test_ticket_converter.py
tests/test_intelligence/: test_analyzer.py  test_extractor.py  test_generator.py  test_integration.py  test_scorer.py
tests/test_parsers/: test_markdown.py
